2004-04-22  Jani Monoses <jani@iv.ro>

	 * cdl/hal_mips.cdl :
	 Invoke tail with stricter syntax that works in latest coreutils. 

2003-08-06  Andy Dyer <adyer@righthandtech.com>

	* include/arch.inc: Changed mask for cause register interrupt bits
	to 0x3f from 0x7f. The extra bit was wrong, but in all current
	implementations, benign.

	* include/mips-stub.h: Disabled use of 64 bit registers for TX49,
	so we can work with the public release compiler.

2003-04-27  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/vectors.S: Pass saved interrupt state pointer to interrupt
	handlers as (undeclared) third argument. Suggested by
	Ryouzaburou Suzuki.

2003-03-11  Mark Salter  <msalter@redhat.com>

	* src/redboot_linux_exec.c (do_exec): Call eth_drv_stop as necessary.

2003-02-27  Nick Garnett  <nickg@calivar.com>

	* include/mips-stub.h: Disabled option that makes MIPS32 targets
	use 64 bit registers in GDB protocol. The standard GDB does not
	support this, only MIPS own version.

2003-01-31  Mark Salter  <msalter@redhat.com>

	* src/hal_syscall.c (hal_syscall_handler): Let generic syscall code
	handle exit.

2003-01-09  Tim Michals  <t.michals@attbi.com>

	* src/hal_misc.c (hal_delay_us): Use HAL_CLOCK_READ instead of inline
	asm, to allow for variant/platform HAL packages overriding.

2002-12-12  Bart Veer  <bartv@ecoscentric.com>

	* include/hal_cache.h: allow for cache flushes etc. where the base
	address is not aligned to a cacheline boundary.

2002-08-02  Andrew Lunn <Andrew.Lunn@ascom.ch>

	* cdl/hal_mips.cdl: Redboot exec command can now be disabled 
	  by CDL
	
2002-05-17  Jesper Skov  <jskov@redhat.com>

	* include/hal_intr.h: Fix CYGNUM_HAL_EXCEPTION_MIN definition so
	it reflects the FPU configuration.

2002-04-30  Jesper Skov  <jskov@redhat.com>

	* include/hal_intr.h: Only define decoded FPU vectors if these are
	actually used. This allows tests to check for capabilities and do
	N/A when appropriate.

2002-04-15  Jonathan Larmour  <jlarmour@redhat.com>
